--- a/styles/header.css
+++ b/styles/header.css
@@ -1,44 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: #000000;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    display: grid;
-    grid-template-columns: auto auto;
-}
-
-/*NAV BAR*/
-
-nav{
-    width: 15.4rem;
-    border-right-color: rgb(145, 144, 144);
-    border-right-style: solid;
-    border-right-width: 0.5px;
-    height: 100vh;
-    position: fixed;
-}
-
-nav div{
-    margin-top: 3rem;
-    margin-left: 3rem;
-}
-
-nav div p{
-    margin-bottom: 2.2rem;
-}
-
-.instagram{
-    width: 7rem;
-    margin-top: 3rem;
-    margin-left: 2.5rem
-}
-
-/*HEADER/TOP PART*/
-
 header{
     width: 55rem;
     margin-left: 15rem;
@@ -127,64 +86,59 @@ main{
     color: rgb(145, 144, 144);
 }
 
+/*TABS*/
+
 .tabs{
     border-top-style: solid;
     border-top-color:  rgb(145, 144, 144);
+    color: rgb(145, 144, 144);
     justify-content: center;
     border-top-width: 0.05rem;
     width: 60.5rem;
     height: 3rem;
     margin-left: 5rem;
+    font-weight: bold;
 }
 
-.tabs p{
-    margin-left: 5rem;
-    font-size: 0.8rem;
-    padding-top: 1rem;
+.tabs-inner-cont div:first-child{
+    border-top-style: solid;
+    border-top-width: 0.1rem;
+    color: white;
 }
 
-.tabs div{
+.tabs-inner-cont{   
     display: flex;
     flex-direction: row;
-    margin-left: 14rem;
+    margin-left: 17rem;
+}
+
+.tabs-inner-cont div{
+    display: flex;
+    flex-direction: row;
+    margin-right: 4rem; 
+}
+
+.tabs-inner-cont p{
+    margin-top: 1rem;
+    font-size: 0.75rem;
+}
+
+.grid{
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.2rem;
+    margin-top: 0.9rem;
+}
+
+.tag{
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.2rem;
+    margin-top: 1rem;
 }
 
 .bookmark{
-    width: rem;
     height: 0.8rem;
-}
-/*POSTS*/
-
-.grid-container-post{
-    display: grid;
-    grid-template-columns: 20rem 20rem 20rem;
-    column-gap: 0.25rem;
-    row-gap: 0.25rem;
-    margin-left: 5rem;
-}
-
-.grid-container-post img{
-    width: 20rem;
-    height: 20rem;
-}
-
-.grid-container-post div:hover{
-    background-color: rgba(145, 144, 144, 0.5);
-}
-
-
-
-/*FOOTER*/
-footer{
-    display: flex;
-    flex-direction: row;
-    margin-left: 18rem;
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-    color: rgb(218, 218, 210);
-}
-
-footer p{
-    font-size: 0.8rem;
-    margin-left: 0.5rem;
+    margin-right: 0.2rem;
+    margin-top: 1rem;
 }
